--- a/index.html
+++ b/index.html
@@ -18,17 +18,13 @@
                 <ul>
                     <li><a href="">Portfolio</a></li>
                     <li><a href="">Blog</a></li>
-                    <li><a href="">Hire Me</a></li>
+                    <li><a href=""><button>Hire Me</button></a></li>
                 </ul>
             </div>
         </nav>
     </header>
         <main>
             <section id="hero_section">
-                <div class="left-part">
-                    <div class="developer-text">
-                        <img class="developer-img" src="images/developer.png" alt="">
-                    </div>
                     <div class="text-area">
                         <h3>Hi, I  am</h3>
                         <h1>Rayhan Islam</h1>
@@ -38,8 +34,7 @@
                             <button>Contact</button>
                         </div>
                     </div>
-                </div>
-                <div class="right-part"></div>
+                    <img class="profile_pic" src="images/hardy.png" alt="">
             </section>
         </main>
     <footer>
